Crash when cutting meta-meta #94280

Closed
opened 2021-12-20 20:27:37 +01:00 by Alexandre Franke · 5 comments

I am editing a video with footage from three cameras. Two are 25fps and the third one is 50fps, so I set the project fps to 25 and I have a Speed control effect strip on the 50fps footage, set to Multiply 2. The video strip and the Speed control speed are in a meta.

As the footage is long, the camera split it into multiple file. So I have three movie+speed metas one after the other. I put these all in a meta, to have a single video strip to work on for that camera.

When I select the meta-meta and hit K to cut (trimming the beginning of it), Blender crashes.

I am editing a video with footage from three cameras. Two are 25fps and the third one is 50fps, so I set the project fps to 25 and I have a Speed control effect strip on the 50fps footage, set to Multiply 2. The video strip and the Speed control speed are in a meta. As the footage is long, the camera split it into multiple file. So I have three movie+speed metas one after the other. I put these all in a meta, to have a single video strip to work on for that camera. When I select the meta-meta and hit K to cut (trimming the beginning of it), Blender crashes.

Added subscriber: @afranke

Added subscriber: @afranke

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 606f6e73b0

This issue was referenced by 606f6e73b04c855c6525df1e7e30f112f74268a4

This issue was referenced by e4de5b4657

This issue was referenced by e4de5b4657d364e407db4750a0f5d9a2cf16cc26

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-12-21 05:31:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94280
No description provided.